refactored: getAllUsers method's list changed 'unmodified' to 'modified' to redis cache